fixed calling api on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,18 @@ body {
   overflow: hidden;
   transition: all 0.2s;
 }
+.advice__btn-icon {
+  transform: translate(1.75rem, 1.9rem);
+}
 
 @media (max-width: 600px) {
   .advice__btn {
     height: 7.2rem;
     width: 7.2rem;
+  }
+
+  .advice__btn-icon {
+    transform: translate(2.1rem, 2.2rem);
   }
 }
 
